Service Regression/tests/00DM0000001eO1fMAE/objects/Product_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Tier_Governor_Co_op_Level_of_Service_Fea__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Featured Co-op Level of Service</inlineHelpText>
        <label>Featured Co-op Level of Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Fields_Premium_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to indicate if Tier Governor fields (i.e. Tier Governor Type, Tier Governor Value, Tier Governor Advertised Make, Tier Governor Vehicle Quantity, Tier Governor Vehicle Monthly Rate, Tier Governor Co-op Level of Service) are applicable to Package Configuration record</description>
        <inlineHelpText>Premium Fields</inlineHelpText>
        <label>Premium Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Sequence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vehicle Sequence</inlineHelpText>
        <label>Vehicle Sequence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Sorting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vehicle Sorting</inlineHelpText>
        <label>Vehicle Sorting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Type_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Featured Type</inlineHelpText>
        <label>Featured Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Value_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Featured Value</inlineHelpText>
        <label>Featured Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Vehicle_Monthly_Rate_Featu__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Featured Vehicle Monthly Rate</inlineHelpText>
        <label>Featured Vehicle Monthly Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Vehicle_Quantity_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Featured Vehicle Quantity</inlineHelpText>
        <label>Featured Vehicle Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_6_cities_1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Top 6 cities where Dealers customers come from: 1</inlineHelpText>
        <label>Top 6 cities: 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_6_cities_2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Top 6 cities where Dealers customers come from: 2</inlineHelpText>
        <label>Top 6 cities: 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_6_cities_3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Top 6 cities where Dealers customers come from: 3</inlineHelpText>
        <label>Top 6 cities: 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Inventory_New_Used_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Inventory (New / Used / Certified)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_New_Car_Lot_Size__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total New Car Lot Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Production_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Used_Car_Lot_Size__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Used Car Lot Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tracking Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Headcount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Headcount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transaction Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Twitter ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Existing_Facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Existing Facebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Existing_Twitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Existing Twitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used_Car_Inventory_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used Car Inventory Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used_Car_Make_GM_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used Car Make (GM Package)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used_Car_Make_Quantity_GM_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used Car Make Quantity (GM Package)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whisper_KBB_Showcase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Showcase Call Tracking Whisper</inlineHelpText>
        <label>KBB Showcase Call Tracking Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whisper_Used_KBB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Call Tracking Used Whisper</inlineHelpText>
        <label>KBB Call Tracking Used Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whisper_new__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking New Whisper</inlineHelpText>
        <label>Call Tracking New Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whisper_new_kbb__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Call Tracking New Whisper</inlineHelpText>
        <label>KBB Call Tracking New Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whisper_used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Tracking Used Whisper</inlineHelpText>
        <label>Call Tracking Used Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XML_Email_Address_KBB_Showcase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KBB Showcase XML Email Address</inlineHelpText>
        <label>KBB Showcase XML Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XML_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>LeadDriver XML Email Address</inlineHelpText>
        <label>LeadDriver XML Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iMR_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iMR Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vAuto_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>vAuto ID</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Configuration</label>
    <nameField>
        <label>Product Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RestrictProductLookupToEdit</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED( Product2__c ),NOT(ISBLANK(Product2__c)))</errorConditionFormula>
        <errorMessage>Sorry!!You cant change the Product field</errorMessage>
    </validationRules>
</CustomObject>